tests/error/func_sig_differ.gw
function void test(){}
function int  test(){}

